--- a/css/main.css
+++ b/css/main.css
@@ -13,26 +13,28 @@
   padding-left: 5px;
   padding-right: 5px;
   display: flex;
+  padding-top: 21px;
+  padding-bottom: 21px;
+  
 }
 
 .header__mail-menu {
-   flex: 1 1 395px;
+   flex: 2;
    display: flex;
-   padding-top: 37px;;
+   padding-top: 37px;
 }
 
 .logo {
-  flex: 2 1 395px;
-}
-
-.header__mailto {
-  flex: 1 1 198px;
- 
+  flex: 4;
 }
 
 .header__mail-link {
   color: #494843;
-  flex: 1 1 198px;
+  flex: 1;  
+}
+
+.header__mailto {
+  flex: 1;
 }
 
 .header__mail-icon {
