--- a/css/bestellung.css
+++ b/css/bestellung.css
@@ -1,6 +1,6 @@
 /* Bestellung section styles*/
 
-.sehen {
+.sehen-container {
     margin-bottom: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -12,5 +12,5 @@
     font-weight: 700;
 }
 
-
+  
 
