--- a/css/nav.css
+++ b/css/nav.css
@@ -3,12 +3,13 @@
 .nav {
     border-top: 1px solid #33a0da;
     border-bottom: 1px solid #33a0da;
+    height: 33px;
 }
 
 .nav__4xblock { 
     flex: 1;
-    margin-bottom: -5px;
     padding: 0;
+    margin-top: -1px;
 }
 
 .nav__arrow { 
@@ -21,30 +22,7 @@
 .nav__arrow_z-inx3 { z-index: 3;}
 .nav__arrow_z-inx4 { z-index: 4;}
 
-.nav__rect {
-    position: absolute;
-    margin-left: -8px;
-    margin-top: -3px;
-    z-index: 10;
-    display: inline-block;
-    background-color: #33a0da;
-    width: 33px;
-    height: 33px;
-    box-sizing: content-box;
-    border-radius: 4px;
-    border: 3px solid #33a0da;
-}
 
-.nav__icon {
-    z-index: 11;
-    position: absolute;
-    margin-left: 6px;
-    margin-top: 9px;    
-}
-
-.nav__iconfile {
-    margin-top: 3px;
-}
 
 .nav__titles {
     display: flex;
@@ -60,4 +38,42 @@
     padding-top: 7px;
     padding-bottom: 7px;
     letter-spacing: .5px;
+}
+
+.nav__element-short {
+    flex: 1 0 90px;
+    height: 33px;
+    background: url('../images/nav-arrow-body.png');
+} 
+
+.nav__element-long {
+    flex: 1 0 101px;
+    height: 33px;
+    background: url('../images/navend.png');
+} 
+
+.nav__element-rect {
+    flex: 1 1 33px;
+    height: 33px;
+} 
+
+.nav__rect {
+    position: absolute;
+    margin-left: -8px;
+    margin-top: -3px;
+    z-index: 10;
+    display: inline-block;
+    width: 33px;
+    height: 33px;
+    box-sizing: content-box;
+    border-radius: 4px;
+    border: 3px solid #33a0da;
+}
+
+.nav_check {
+background: #33a0da url(../images/checkwhite.svg) no-repeat center center;
+}
+
+.nav_file {
+background: #33a0da url(../images/file.svg) no-repeat center center;    
 }
