added form and fixes

--- a/css/main.css
+++ b/css/main.css
@@ -12,12 +12,16 @@ body *, body *::before, body *::after {
 .container {
   width: 1200px;
   margin: 0 auto;
-  
 }
 
 .container_flex {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
+}
+
+.column-container {
+  flex: 1 1 530px;;
+  max-width: 530px;
 }
 
 .general-layout {
@@ -41,14 +45,17 @@ body *, body *::before, body *::after {
 .h2 {
   font-size: 20px;
   font-weight: 400;
+  line-height: 20px;
   margin-top: 0;
   margin-bottom: 30px;
+
 }
 
 .h3 {
   font-size: 1rem;
   margin-top: 0;
   margin-bottom: 30px;  
+  line-height: 24px;
 }
 
 .text {
@@ -83,10 +90,6 @@ body *, body *::before, body *::after {
 
 .checkbox__input:checked {
   background: transparent url("../images/check.svg") no-repeat center center;
-}
-
-.checkbox__title {
-
 }
 
 .link_bold {
@@ -141,10 +144,7 @@ body *, body *::before, body *::after {
   font-weight: 300;
   line-height: 16px;
   text-align: left;
-}
-
-.form_width50per {
-  max-width: 514px;
+  max-width: 514px;  
 }
 
 .form__line {
@@ -155,6 +155,7 @@ body *, body *::before, body *::after {
 
 .form__label {
   flex: 1 1 140px;
+  max-width: 140px;
 }
 
 .form__input {
@@ -162,19 +163,19 @@ body *, body *::before, body *::after {
   border: 1px solid #979797;
   box-sizing: border-box;
   background-color:  #eeeeee;
-  width: 374px;
+  max-width: 374px;
+  min-width: 173px;
   height: 34px;
   padding-left: 18px;
 }
 
 .form__select {
--moz-appearance: none;
--webkit-appearance: none;
-font: inherit;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  font: inherit;
 
-background: #eeeeee url("../images/select.png") no-repeat right center;
-display: block;  
-border-radius: 0;
+  background: #eeeeee url("../images/select.png") no-repeat right center;
+  border-radius: 0;
 }
 
 .form__option {
@@ -187,4 +188,16 @@ border-radius: 0;
 
 .block_bottom-border {
   border-bottom: 1px solid #767676;
+}
+
+.double-input {
+  flex: 1 1 374px;
+}
+
+.form__input_short {
+  max-width: 173px;
+}
+
+.info__button {
+  margin-left: 8px;
 }
