--- a/css/main.css
+++ b/css/main.css
@@ -218,6 +218,7 @@ body *, body *::before, body *::after {
 .button {
   color: #ffffff;
   border-radius: 4px;
+  border: none;
   background-color:  #f32198;
   box-shadow: 0px 3px 0px 0px #aa186a;
   text-align: center;
@@ -226,4 +227,9 @@ body *, body *::before, body *::after {
   padding: 10px 21px 10px 21px;
   max-width: fit-content;
   margin-bottom: 30px;
+  cursor: pointer;
+}
+
+.button__link {
+  text-decoration: none;
 }
