--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,7 @@ body *, body *::before, body *::after {
   font-size: 16px;
   font-weight: 400;
   color: #494843;
+  text-align: left;  
   padding: 0;
 }
 
@@ -232,4 +233,37 @@ body *, body *::before, body *::after {
 
 .button__link {
   text-decoration: none;
+}
+
+.footer {
+  height: 276px;
+  background-image: linear-gradient(to top, #afadae 22%, #dad8d9 64%, #e9e9e9 96%);
+  border-top: 1px solid #33a0da;
+}
+
+.footer__column-container {
+  flex: 1 1 100px;;
+  max-width: 200px;
+}
+
+.footer__container_flex {
+  display: flex;
+  justify-content: space-around;
+}
+
+.list__header {
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 22px;
+  text-align: left;
+  list-style-type: none;
+  
+}
+
+.li {
+  color:  #494843;
+  font-size: 13px;
+  line-height: 20px;
+  text-align: left;
+  list-style-type: none;
 }
