--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,8 @@ body {
   box-sizing: border-box;
 }
 
-body *, body *::before, body *::after {
+*, *::before, *::after {
+  font-family: inherit;
   box-sizing: inherit;
   margin-top: 0;
 }
@@ -38,7 +39,7 @@ body *, body *::before, body *::after {
    padding: 50px 33px 50px 33px;
 }
 
-.h1 {
+.heading1 {
   color:  #33a0da;
   font-size: 35px;
   font-weight: 300;
@@ -47,7 +48,7 @@ body *, body *::before, body *::after {
   margin-bottom: 30px;
 }
 
-.h2 {
+.heading2 {
   font-size: 20px;
   font-weight: 400;
   line-height: 22px;
@@ -55,7 +56,7 @@ body *, body *::before, body *::after {
 
 }
 
-.h3 {
+.heading3 {
   font-size: 1rem;
   margin-bottom: 30px;  
   line-height: 24px;
@@ -66,7 +67,7 @@ body *, body *::before, body *::after {
   line-height: 20px;
 }
 
-.block_mar-btm-0 {
+.global_mar-btm-0 {
   margin-bottom: 0 !important;
 }
 
@@ -123,7 +124,7 @@ body *, body *::before, body *::after {
   max-height: fit-content;
 }
 .table__summ {
-  flex: 1 1 517;
+  flex: 1 1 517px;
   max-width: 517px;
 }
 
@@ -134,7 +135,6 @@ body *, body *::before, body *::after {
   line-height: 18px;
   border: 1px solid #767676;
   padding: 12px 18px 12px 18px;
-  box-sizing: border-box;
 }
 
 .td_bold {
@@ -174,7 +174,6 @@ body *, body *::before, body *::after {
 .form__input {
   flex: 1 1 374px;
   border: 1px solid #979797;
-  box-sizing: border-box;
   background-color:  #eeeeee;
   max-width: 374px;
   min-width: 173px;
@@ -321,7 +320,7 @@ body *, body *::before, body *::after {
   align-items: flex-start;
 }
 
-.container_ver-padded {
+.sehen {
     padding-top: 17px;
     padding-bottom: 17px;
     margin-bottom: 30px;
