--- a/css/header.css
+++ b/css/header.css
@@ -1,8 +1,7 @@
 /* CSS for Header */
 
 .header {
-  padding-top: 26px;
-  padding-bottom: 16px;
+  padding: 26px 8px 16px 8px;
 }
 
 .header__mail-menu {
@@ -12,7 +11,6 @@
 }
 
 .logo {
-  padding-left: 8px;
   flex: 4;
 }
 
@@ -30,7 +28,6 @@
 }
 
 .header__menu {
-  padding-right: 8px;
   color: #33a0da;
 }
 
