--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
   margin-top: 0;
 }
 
-.univ_container {
+.section_width-1200 {
   width: 1200px;
   margin: 0 auto;
 }
@@ -52,7 +52,6 @@
   font-weight: 400;
   line-height: 22px;
   margin-bottom: 30px;
-
 }
 
 .heading3 {
