--- a/css/nav.css
+++ b/css/nav.css
@@ -1,70 +1,58 @@
 /* Nav CSS */
 
 .nav {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
-
-.nav__element-short {
-    flex: 1 0 90px;
-    height: 33px;
-    background: url('../images/nav-arrow-body.png');
-    margin-top: -1px;
-    
-} 
-
-.nav__element-short::after {
-    content: url('../images/nav-arrow-nose.png');
-    position: relative;
-    left: 100%;
-    
+.nav__element {
+  flex: 1 1 90px;
+  height: 32px;
+  background: linear-gradient(90deg, #9bdbff 0%, #c8ecff 40%);
+  border-left: 1px solid  #33a0da;
 }
 
-.nav__element-long {
-    flex: 1 0 101px;
-    height: 33px;
-    background: url('../images/navend.png');
-} 
-
-.nav__rect-container {
-    flex: 1 1 33px;
-    height: 31px;
-} 
+.nav__element::after {
+  content: url('../images/nav-arrow-nose.png');
+  position: relative;
+  left: 100%;
+}
 
 .nav__rect {
-    position: absolute;
-    margin-left: -8px;
-    margin-top: -4px;
-    z-index: 10;
-    display: inline-block;
-    width: 33px;
-    height: 33px;
-    box-sizing: content-box;
-    border-radius: 4px;
-    border: 3px solid #33a0da;
+  flex: 1 1 33px;
+} 
+
+.nav__icon {
+  box-sizing: content-box;
+  position: absolute;
+  z-index: 10;
+  margin-top: -3px;
+  width: 32px;
+  height: 32px;
+  border: 3px solid #33a0da;
+  border-radius: 4px;
 }
 
-.nav_check {
-    background: #33a0da url(../images/checkwhite.svg) no-repeat center center;
+.nav__icon_check {
+  background: #33a0da url(../images/checkwhite.svg) no-repeat center center;
 }
 
-.nav_file {
-    background: #33a0da url(../images/file.svg) no-repeat center center;    
+.nav__icon_file {
+  background: #33a0da url(../images/file.svg) no-repeat center center;    
 }
 
 .nav__titles {
-    display: flex;
+  display: flex;
 }
 
 .nav__title {
-    flex: 1;
-    position: relative;
-    color: #33a0da;
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 21px;
-    padding-top: 7px;
-    padding-bottom: 7px;
-    letter-spacing: .5px;
+  flex: 1;
+  position: relative;
+  color: #33a0da;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 21px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  letter-spacing: .5px;
 }
