--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ body {
 }
 
 .section {
-   padding: 50px 33px 50px 33px;
+   padding: 50px 33px 20px 33px;
 }
 
 .section_flex {
@@ -67,10 +67,6 @@ body {
 .section__paragraph {
   margin-bottom: 30px;
   line-height: 20px;
-}
-
-.section_mar-btm-0 {
-  margin-bottom: 0 !important;
 }
 
 .section_margin-bottom50px {
@@ -151,8 +147,6 @@ body {
   background-color: #eef9ff;
 }
 
-
-
 .form {
   font-family: inherit;
   color:  #494843;
@@ -208,13 +202,14 @@ body {
   padding-top: 5px;
 }
 
-.form__caption {margin-top: 50px;}
+.form__caption {
+  margin-top: 50px;
+  margin-bottom: 30px;
+}
 
 .section_bottom-border {
   border-bottom: 1px solid #767676;
 }
-
-
 
 .info__button {
   margin-left: 8px;
@@ -247,6 +242,8 @@ body {
 .footer {
   background-image: linear-gradient(to top, #afadae 22%, #dad8d9 64%, #e9e9e9 96%);
   border-top: 1px solid #33a0da;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .footer__column {
@@ -280,10 +277,6 @@ body {
   text-align: left;
   list-style-type: none;
   
-}
-
-.section_margin-bt10px {
-  margin-bottom: 10px;
 }
 
 .img-payment {
